--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ semver = "0.9.0"
 smallvec = "1.4.2"
 neon-runtime = { version = "=0.7.1", path = "crates/neon-runtime" }
 neon-macros = { version = "=0.7.1", path = "crates/neon-macros", optional = true }
+serde_crate = { package = "serde", version = "1", optional = true }
 
 [features]
 default = ["legacy-runtime"]
@@ -71,6 +72,9 @@ event-queue-api = []
 
 # Feature flag to include procedural macros
 proc-macros = ["neon-macros"]
+
+# Feature flag to enable serde on Neon types
+serde = ["serde_crate", "neon-runtime/serde"]
 
 [package.metadata.docs.rs]
 features = ["docs-only", "event-handler-api", "proc-macros", "try-catch-api"]
