--- a/test/napi/Cargo.toml
+++ b/test/napi/Cargo.toml
@@ -9,8 +9,12 @@ edition = "2018"
 [lib]
 crate-type = ["cdylib"]
 
+[dependencies]
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+
 [dependencies.neon]
 version = "*"
 path = "../.."
 default-features = false
-features = ["default-panic-hook", "napi-6", "try-catch-api", "event-queue-api"]
+features = ["default-panic-hook", "napi-6", "try-catch-api", "event-queue-api", "serde"]
